--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.98.0">
-    <title>Login</title>
+    <title>Register</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/sign-in/">
 
@@ -87,26 +87,34 @@
   <body class="text-center">
     
 <main class="form-signin w-100 m-auto">
-  <form action="/login" method="post">
+  <form action="/register" method="post">
     <img class="mb-4" src="/stylesheets/bootstrap-logo.svg" alt="" width="72" height="57">
-    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 fw-normal">Register form</h1>
 
     <div class="form-floating">
       <input type="email" class="form-control" id="email" placeholder="name@example.com" name="email" required>
       <label for="email">Email address</label>
     </div>
     <div class="form-floating">
+      <input type="text" class="form-control" id="name" placeholder="Name" name="name" required>
+      <label for="name">Name</label>
+    </div>
+    <div class="form-floating">
       <input type="password" class="form-control" id="password" placeholder="Password" name="password" required>
       <label for="password">Password</label>
     </div>
+    <div class="form-floating">
+        <input type="password" class="form-control" id="repassword" placeholder="Retype Password" name="repassword" required>
+        <label for="repassword">Retype Password</label>
+      </div>
 
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
     <% if (info.length > 0) {%>
     <div class="alert alert-danger" role="alert">
       <%= info %>
     </div>
     <% } %>
-    <p class="mt-5 mb-3 text-muted">Register account <a href="/register">here</a></p>
+    <p class="mt-5 mb-3 text-muted">Login account <a href="/register">here</a></p>
   </form>
 </main>
 
