--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
 
             <div class="card-footer">
                 <button type="submit" class="btn btn-primary">Cari</button>
-                <button type="button" onclick="readData()"  class="btn btn-warning">Reset</button>
+                <button type="button" id="reset-form-search" class="btn btn-warning">Reset</button>
             </div>
         </div>
     </div>
