vanilla js and jquery done

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -109,11 +109,11 @@
       </div>
 
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
-    <% if (info.length > 0) {%>
-    <div class="alert alert-danger" role="alert">
-      <%= info %>
-    </div>
-    <% } %>
+    <% if (info.length > 0) { %>
+      <div class="alert alert-danger" role="alert">
+        <%= info %>
+       </div>
+       <% } %>
     <p class="mt-5 mb-3 text-muted">Login account <a href="/register">here</a></p>
   </form>
 </main>
@@ -122,4 +122,5 @@
     
   
 
-</body><auto-scroll></auto-scroll></html>
+</body><auto-scroll></auto-scroll>
+</html>
