--- a/views/list.ejs
+++ b/views/list.ejs
@@ -181,6 +181,7 @@
   </style>
   <h1>BREAD (Browse, Read, Edit, Add, Delete)</h1>
   <h2>Filters</h2>
+  <h3>Switch to <a href="/test">Vanilla JS</a> or <a href="/jquery">JQuery</a> or <a href="/logout">Logout</a></h3>
   <form action="" method="get">
     <div class="row">
       <div class="col-25">
